# ActixWeb_openIDConnect

./: Cargo.toml  readMe.md
.github/workflows/: build_test.yml  release.yml
example/: main.rs
src/: lib.rs  openid.rs  openid_middleware.rs
tests/: mock_auth_api.rs  tests.rs
