[package]
name = "actix_web_openidconnect"
description = "Lightweight async OpenID Connect (OIDC) client and middleware for Actix-Web."
homepage = "https://github.com/RomainMichau/ActixWeb_openIDConnect/"
documentation = "https://github.com/RomainMichau/ActixWeb_openIDConnect/"
repository = "https://github.com/RomainMichau/ActixWeb_openIDConnect/"
readme = "readMe.md"
version = "0.1.3"
authors = ["Romain Michau"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = "4"
oauth2 = "5"
actix-web = "4"
serde_json = "1"
serde = "1"
futures-util = "0.3"
derive_more = "2"
anyhow = "1"
log = "0.4"
url = "2"

[dev-dependencies]
httpmock = "0.7.0"
actix-http = "3.6.0"
actix-service = "2.0.2"
